--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@
 main {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: calc(100vh - 48px) repeat(4, minmax(100vh, max-content));
+  grid-template-rows: repeat(4, minmax(100vh, max-content));
 }
 
 @font-face {
