--- a/src/index.css
+++ b/src/index.css
@@ -6,13 +6,18 @@
   font-size: 62.5%;
 }
 
+button:hover {
+  cursor: pointer;
+}
+
 #root {
   margin: 0 auto;
 }
 
 main {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: 270px 3.5fr 0.75fr 4%;
+  column-gap: 20px;
   grid-template-rows: repeat(4, minmax(100vh, max-content));
 }
 
